--- a/students/motkaliuk_andrii/10_css_box_model/denis_novik/index.html
+++ b/students/motkaliuk_andrii/10_css_box_model/denis_novik/index.html
@@ -6,14 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Denis Novik</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;700&display=swap"
         rel="stylesheet">
-
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -31,104 +30,85 @@
         </div>
     </header>
 
-
     <main>
         <section class="hero_block">
             <h1>Denis Novik</h1>
             <img class="hero_image" src="./images/hero.jpg" width="944" height="387" alt="Denis Novik">
         </section>
 
-        <div class="about_me_container">
+        <section class="about_me_container">
             <h2 class="about_me_header">About me</h2>
-            <p class="about_item1">
-                Hi, I'm Denis – UX/UI designer from Minsk.<br>
-                I'm interested in design and everything connected with it.
-            </p>
+            <p class="about_item1">Hi, I'm Denis – UX/UI designer from Minsk.<br>I'm interested in design and everything
+                connected with it.</p>
+            <p class="about_item2">I'm studying at courses "Web and mobile design<br>interfaces" in IT-Academy.</p>
+            <p class="about_item2">Ready to implement excellent projects<br>with wonderful people.</p>
+        </section>
 
-            <p class="about_item2">
-                I'm studying at courses "Web and mobile design<br>
-                interfaces" in IT-Academy.
-            </p>
+        <section class="skills_block">
+            <h2 class="skills_header">Skills</h2>
+            <p class="skills_description">I work in such programs as</p>
+            <div class="skills_item1">
+                <img class="adobe_images" src="./images/ps.svg" alt="Adobe Photoshop">
+                <p class="skills_signature">Adobe<br>Photoshop</p>
+                <div>
+                    <img src="./images/star_full.svg" alt="full star" class="stars">
+                    <img src="./images/star_full.svg" alt="full star" class="stars">
+                    <img src="./images/star_full.svg" alt="full star" class="stars">
+                    <img src="./images/star_full.svg" alt="full star" class="stars">
+                    <img src="./images/star_empty.svg" alt="empty star" class="last_star">
+                </div>
+            </div>
+            <div class="skills_item2">
+                <img class="adobe_images" src="./images/ai.svg" alt="Adobe Illustrator">
+                <p class="skills_signature">Adobe<br>Illustrator</p>
+                <div>
+                    <img src="./images/star_full.svg" alt="full star" class="stars">
+                    <img src="./images/star_full.svg" alt="full star" class="stars">
+                    <img src="./images/star_full.svg" alt="full star" class="stars">
+                    <img src="./images/star_empty.svg" alt="empty star" class="stars">
+                    <img src="./images/star_empty.svg" alt="empty star" class="last_star">
+                </div>
+            </div>
+            <div class="skills_item2">
+                <img class="adobe_images" src="./images/ae.svg" width="89" height="88" alt="Adobe After Effects">
+                <p class="skills_signature">Adobe<br>After Effects</p>
+                <div>
+                    <img src="./images/star_full.svg" alt="full star" class="stars">
+                    <img src="./images/star_full.svg" alt="full star" class="stars">
+                    <img src="./images/star_full.svg" alt="full star" class="stars">
+                    <img src="./images/star_full.svg" alt="full star" class="stars">
+                    <img src="./images/star_empty.svg" alt="empty star" class="last_star">
+                </div>
+            </div>
+            <div class="skills_item2">
+                <img class="figma_image" src="./images/figma.svg" width="58" height="88" alt="Figma">
+                <p class="skills_signature">Figma<br><br></p>
+                <div>
+                    <img src="./images/star_full.svg" alt="full star" class="stars">
+                    <img src="./images/star_full.svg" alt="full star" class="stars">
+                    <img src="./images/star_full.svg" alt="full star" class="stars">
+                    <img src="./images/star_full.svg" alt="full star" class="stars">
+                    <img src="./images/star_empty.svg" alt="empty star" class="last_star">
+                </div>
+            </div>
+        </section>
 
-            <p class="about_item2">
-                Ready to implement excellent projects<br>
-                with wonderful people.
-            </p>
-        </div>
+        <section class="portfolio">
+            <h2 id="portfolio">Portfolio</h2>
+            <div class="fashion-store">
+                <img class="portfolio_image" src="./images/woman.png" alt="Online fashion store - Homepage">
+                <p><a class="portfolio_links" href="#" target="_blank">Online fashion store -<br>Homepage</a></p>
+            </div>
+            <div class="reebok-store">
+                <img class="portfolio_image" src="./images/reebok.png" alt="Reebok Store - Concep">
+                <p><a class="portfolio_links" href="#" target="_blank">Reebok Store - Concept</a></p>
+            </div>
+            <div class="braun">
+                <img class="portfolio_image" src="./images/cam.png" alt="Braun Landing Page - Concept">
+                <p><a class="portfolio_links" href="#" target="_blank">Braun Landing Page - Concept</a></p>
+            </div>
+        </section>
     </main>
-
-    <section class="skills_block">
-        <h2 class="skills_header">Skills</h2>
-        <p class="skills_description">I work in such programs as</p>
-        <div class="skills_item1">
-            <img class="adobe_images" src="./images/ps.svg" alt="Adobe Photoshop">
-            <p class="skills_signature">Adobe<br>Photoshop</p>
-            <div>
-                <img src="./images/Star_full.svg" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" alt="full star" class="stars">
-                <img src="./images/Star_empty.svg" alt="empty star" class="last_star">
-            </div>
-        </div>
-        <div class="skills_item2">
-            <img class="adobe_images" src="./images/ai.svg" alt="Adobe Illustrator">
-            <p class="skills_signature">Adobe<br>Illustrator</p>
-            <div>
-                <img src="./images/Star_full.svg" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" alt="full star" class="stars">
-                <img src="./images/Star_empty.svg" alt="empty star" class="stars">
-                <img src="./images/Star_empty.svg" alt="empty star" class="last_star">
-            </div>
-        </div>
-        <div class="skills_item2">
-            <img class="adobe_images" src="./images/ae.svg" width="89" height="88" alt="Adobe After Effects">
-            <p class="skills_signature">Adobe<br>After Effects</p>
-            <div>
-                <img src="./images/Star_full.svg" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" alt="full star" class="stars">
-                <img src="./images/Star_empty.svg" alt="empty star" class="last_star">
-            </div>
-        </div>
-        <div class="skills_item2">
-            <img class="figma_image" src="./images/figma.svg" width="58" height="88" alt="Figma">
-            <p class="skills_signature">Figma<br><br></p>
-            <div>
-                <img src="./images/Star_full.svg" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" alt="full star" class="stars">
-                <img src="./images/Star_empty.svg" alt="empty star" class="last_star">
-            </div>
-        </div>
-    </section>
-
-    <section class="portfolio">
-        <h2 id="portfolio">Portfolio</h2>
-        <div class="fashion-store">
-            <img class="portfolio_image" src="./images/woman.png" alt="Online fashion store - Homepage">
-            <p>
-                <a class="portfolio_links" href="#" target="_blank">Online fashion store -<br>Homepage</a>
-            </p>
-        </div>
-
-        <div class="reebok-store">
-            <img class="portfolio_image" src="./images/reebok.png" alt="Reebok Store - Concep">
-            <p>
-                <a class="portfolio_links" href="#" target="_blank">Reebok Store - Concept</a>
-            </p>
-        </div>
-
-        <div class="braun">
-            <img class="portfolio_image" src="./images/cam.png" alt="Braun Landing Page - Concept">
-            <p>
-                <a class="portfolio_links" href="#" target="_blank">Braun Landing Page - Concept</a>
-            </p>
-        </div>
-    </section>
 
     <footer class="footer-box">
         <h2 class="contacts_header" id="contacts">Contacts</h2>
@@ -152,6 +132,7 @@
                 </li>
             </ul>
         </div>
+
         <p class="footer_description">Like me on<br>LinkedIn, Instagram, Behance,<br>Dribble</p>
     </footer>
 </body>
