--- a/students/motkaliuk_andrii/10_css_box_model/productly/index.html
+++ b/students/motkaliuk_andrii/10_css_box_model/productly/index.html
@@ -6,17 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productly</title>
-    <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="./css/reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Poppins:wght@700&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
-    <div class="site_container">
+    <main class="site_container">
         <header class="header_container">
             <div class="emblem">
                 <img src="./images/logo.svg" alt="logo">
@@ -39,10 +39,6 @@
 
             </div>
         </header>
-        <img src="./images/des_thinking.svg" alt="logo">
-        <img src="./images//design_prof.svg" alt="logo">
-
-
         <footer>
             <div class="footer_container">
                 <div class="footer_icon">
@@ -81,7 +77,7 @@
                 </div>
             </div>
         </footer>
-    </div>
+    </main>
 </body>
 
 </html>
