Changes added 11.07 edition

--- a/students/motkaliuk_andrii/10_css_box_model/productly/index.html
+++ b/students/motkaliuk_andrii/10_css_box_model/productly/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <main class="site_container">
+    <div class="site_container">
         <header class="header_container">
             <div class="emblem">
                 <img src="./images/logo.svg" alt="logo">
@@ -77,7 +77,7 @@
                 </div>
             </div>
         </footer>
-    </main>
+    </div>
 </body>
 
 </html>
