--- a/students/motkaliuk_andrii/11_flexbox_bootstrap/index.html
+++ b/students/motkaliuk_andrii/11_flexbox_bootstrap/index.html
@@ -6,57 +6,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productly</title>
-    <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="./css/reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Poppins:wght@700&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
-<body>
-    <div class="site_container">
-        <header class="header_container">
-            <div class="emblem">
-                <img src="./images/logo.svg" alt="logo">
+<body class="container">
+    <header class="header_container">
+        <div class="emblem">
+            <img src="./images/logo.svg" alt="logo">
+        </div>
+        <nav class="navigation_list">
+            <ul>
+                <li class="navigation_item"><a href="#">Product</a></li>
+                <li class="navigation_item"><a href="#">Customers</a></li>
+                <li class="navigation_item"><a href="#">Pricing</a></li>
+                <li class="navigation_item"><a href="#">Resources</a></li>
+            </ul>
+        </nav>
+        <div class="sign_in_up">
+            <div class="sign_in">
+                <button class="sign_in_button">Sign In</button>
             </div>
-            <nav class="navigation_list">
-                <ul>
-                    <li class="navigation_item"><a href="#">Product</a></li>
-                    <li class="navigation_item"><a href="#">Customers</a></li>
-                    <li class="navigation_item"><a href="#">Pricing</a></li>
-                    <li class="navigation_item"><a href="#">Resources</a></li>
-                </ul>
-            </nav>
-            <div class="sign_in_up">
-                <div class="sign_in">
-                    <button class="sign_in_button">Sign In</button>
-                </div>
-                <div class="sign_up">
-                    <button class="sign_up_button">Sign Up</button>
-                </div>
-
+            <div class="sign_up">
+                <button class="sign_up_button">Sign Up</button>
             </div>
-        </header>
 
-        <main>
-            <div class="design_container">
-                <div class="design_item1">
-                    <h1 class="design_header">The Design Thinking superpowers</h1>
-                    <p class="design_item_content">Tools, tutorials, design and innovation experts, all in one place!
-                        The most intuitive way to imagine your next user
-                        experience.</p>
+        </div>
+    </header>
 
-                    <div class="button_container">
-                        <button class="get_started_button">Get started</button>
-                    </div>
-                </div>
-                <div class="design_item2">
-                    <img src="./images/des_thinking.svg" alt="logo">
+    <main>
+        <section class="design_container">
+            <div class="design_item1">
+                <h1 class="design_header">The Design Thinking superpowers</h1>
+                <p class="design_item_content">Tools, tutorials, design and innovation experts, all in one place!
+                    The most intuitive way to imagine your next user
+                    experience.</p>
+
+                <div class="button_container">
+                    <button class="get_started_button">Get started</button>
                 </div>
             </div>
-        </main>
+            <div class="design_item2">
+                <img src="./images/des_thinking.svg" alt="logo">
+            </div>
+        </section>
 
         <section>
             <h2 class="we_design_header">We design tools to unveil<br> your superpowers</h2>
@@ -86,48 +84,47 @@
                 </div>
             </div>
         </section>
+    </main>
 
 
-
-        <footer>
-            <div class="footer_container">
-                <div class="footer_icon">
-                    <img src="./images/logo.svg" alt="logo">
-                </div>
-                <div class="quick_links_block">
-                    <h3 class="footer_headers">Quick Links</h3>
-                    <div class="quick_links">
-                        <ul>
-                            <li><a class="quick_links_item" href="#">About Us</a></li>
-                            <li><a class="quick_links_item" href="#">Blog</a></li>
-                            <li><a class="quick_links_item" href="#">Contacts</a></li>
-                            <li><a class="quick_links_item" href="#">FAQ</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="legal_stuff_block">
-                    <h3 class="footer_headers">Legal Stuff</h3>
-                    <div class="legal_stuff">
-                        <ul>
-                            <li><a class="legal_stuff_item" href="#">Disclaimer</a></li>
-                            <li><a class="legal_stuff_item" href="#">Financing</a></li>
-                            <li><a class="legal_stuff_item" href="#">Privacy Policy</a></li>
-                            <li><a class="legal_stuff_item" href="#">Terms of Service</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="input_place">
-                    <h3 class="footer_headers">Knowing you're always on <br>the best energy deal.</h3>
-                    <div class="input_space_box">
-                        <input class="input_space" type="text" name="text_place" placeholder="Enter your phone Number">
-                    </div>
-                    <div class="footer_button_box">
-                        <button class="footer_button">Sign up Now</button>
-                    </div>
+    <footer>
+        <div class="footer_container">
+            <div class="footer_icon">
+                <img src="./images/logo.svg" alt="logo">
+            </div>
+            <div class="quick_links_block">
+                <h3 class="footer_headers">Quick Links</h3>
+                <div class="quick_links">
+                    <ul>
+                        <li><a class="quick_links_item" href="#">About Us</a></li>
+                        <li><a class="quick_links_item" href="#">Blog</a></li>
+                        <li><a class="quick_links_item" href="#">Contacts</a></li>
+                        <li><a class="quick_links_item" href="#">FAQ</a></li>
+                    </ul>
                 </div>
             </div>
-        </footer>
-    </div>
+            <div class="legal_stuff_block">
+                <h3 class="footer_headers">Legal Stuff</h3>
+                <div class="legal_stuff">
+                    <ul>
+                        <li><a class="legal_stuff_item" href="#">Disclaimer</a></li>
+                        <li><a class="legal_stuff_item" href="#">Financing</a></li>
+                        <li><a class="legal_stuff_item" href="#">Privacy Policy</a></li>
+                        <li><a class="legal_stuff_item" href="#">Terms of Service</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="input_place">
+                <h3 class="footer_headers">Knowing you're always on <br>the best energy deal.</h3>
+                <div class="input_space_box">
+                    <input class="input_space" type="text" name="text_place" placeholder="Enter your phone Number">
+                </div>
+                <div class="footer_button_box">
+                    <button class="footer_button">Sign up Now</button>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
