--- a/students/motkaliuk_andrii/12_position_transform/index.html
+++ b/students/motkaliuk_andrii/12_position_transform/index.html
@@ -6,10 +6,96 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Konstruct</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
+    <header class="header_container">
+        <div class="language">ENG</div>
+        <div class="name">Documentation / Who's using</div>
+        <div class="logo"><img src="images/company-logo-black.svg" alt="company-logo"></div>
+    </header>
 
+
+    <main>
+        <div class="container">
+            <section class="sidebar_conteiner">
+                <ul>
+                    <li class="side-bar_item"><a href="#">Introduction</a></li>
+                    <li class="side-bar_item"><a href="#">core components</a></li>
+                    <li class="side-bar_item"><a href="#">react fundamentals</a></li>
+                    <li class="side-bar_item"><a href="#">handling text input</a></li>
+                </ul>
+            </section>
+            <section class="main-content_container">
+                <div class="content_item">
+                    <h2 class="psevdo-line">Introduction<span class="power">Chapter 1</span></h2>
+                    <p>Welcome to the very start of your React Native journey! If you're looking for environment setup
+                        instructions, they've
+                        moved to their own section. Continue reading for an introduction to the documentation, Native
+                        Components, React, and
+                        more!</p>
+                </div>
+                <div class="content_item">
+                    <h2 class="psevdo-line">core components<span class="power">Chapter 2</span></h2>
+                    <p>React Native is an open source framework for building Android and iOS applications using React
+                        and the app platform’s
+                        native capabiles. With React Native, you use JavaScript to access your platform’s APIs as well
+                        as to describe the
+                        appearance and behavior of your UI using React components: bundles of reusable, nestable code.
+                        You can learn more about
+                        React in the next section. But first, let’s cover how components work in React Native.</p>
+                </div>
+                <div class="content_item">
+                    <h2 class="psevdo-line">react fundamentals<span class="power">Chapter 3</span></h2>
+                    <p>React Native runs on React, a popular open source library for building user interfaces with
+                        JavaScript. To make the most
+                        of React Native, it helps to understand React itself. This section can get you started or can
+                        serve as a refresher
+                        course.</p>
+                    <p>We’re going to cover the core concepts behind React:</p>
+                    <ul>
+                        <li class="rf-list_item">components. The rest of this introduction to React uses cats in its
+                            examples: friendly, approachable creatures that
+                            need names and a cafe to work in.</li>
+                        <li class="rf-list_item">JSX. React and React Native use JSX, a syntax that lets you write
+                            elements inside JavaScript like so:
+                            <Text>Hello, I am your cat!</Text>.
+                        </li>
+                        <p>The React docs have a comprehensive guide to JSX you can refer to learn even more. Because
+                            JSX is JavaScript, you can
+                            use variables inside it. Here you are declaring a name for the cat, name, and embedding it
+                            with curly braces inside
+                            <Text>
+                        </p>
+                        <li class="rf-list_item">props. Props is short for “properties”.</li>
+                        <li class="rf-list_item">state. While you can think of props as arguments you use to configure
+                            how components render, state is like a component’s
+                            personal data storage. State is useful for handling data that changes over time or that
+                            comes from user interaction.
+                            State gives your components memory!</li>
+                    </ul>
+                    <div class="content_item">
+                        <h2 class="psevdo-line">handling text input<span class="power">Chapter 4</span></h2>
+                        <p>TextInput is a Core Component that allows the user to enter text. It has an onChangeText prop
+                            that takes a function to
+                            be called every time the text changed, and an onSubmitEditing prop that takes a function to
+                            be called when the text is
+                            submitted.</p>
+                        <p>For example, let's say that as the user types, you're translating their words into a
+                            different language. In this new
+                            language, every single word is written the same way: 🍕. So the sentence "Hello there Bob"
+                            would be translated as "🍕
+                            🍕".</p>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
