--- a/students/linov_mykhailo/11_flexbox/index.html
+++ b/students/linov_mykhailo/11_flexbox/index.html
@@ -4,10 +4,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Productly</title>
 </head>
 
 <body>
+
+    <header>
+        <div class="container">
+            <div class="logo">
+                <div class="logo__image">
+                    <img src="images/jpg/Logo.jpg" alt="Productly">
+                </div>
+            </div>
+            <nav>
+                <ul class="menu">
+                    <li class="menu__link"><a href="#">Product</a></li>
+                    <li class="menu__link"><a href="#">Customers</a></li>
+                    <li class="menu__link"><a href="#">Pricing</a></li>
+                    <li class="menu__link"><a href="#">Resources</a></li>
+                </ul>
+            </nav>
+            <div class="sign">
+                <div class="sign__in">
+                    <button type="button" class="signin">Sign In</button>
+                </div>
+                <div class="sign__up">
+                    <button type="button" class="signup">Sign Up</button>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+        <div class="container"></div>
+    </footer>
 
 </body>
 
