--- a/students/kukuruza_maxim/11_flex/index.html
+++ b/students/kukuruza_maxim/11_flex/index.html
@@ -12,7 +12,38 @@
 
 <body>
     <header></header>
-    <main></main>
+    <main>
+        <section>
+            <div class="content">
+                <h2 class="section-title">We design tools to unveil your superpowers</h2>
+                <ul class="card-container row">
+                    <li class="card">
+                        <img class="card-icon" src="./images/icon.svg" alt="icon">
+                        <h3 class="card-title">First click tests</h3>
+                        <p class="card-descrition">While most people enjoy casino gambling,</p>
+                    </li>
+                    <li class="card">
+                        <img class="card-icon" src="./images/icon-curve.svg" alt="icon">
+                        <h3 class="card-title">Design surveys</h3>
+                        <p class="card-descrition">Sports betting, lottery and bingo playing for the fun</p>
+                    </li>
+                    <li class="card">
+                        <img class="card-icon" src="./images/icon-heart.svg" alt="icon">
+                        <h3 class="card-title">Preference tests</h3>
+                        <p class="card-descrition">The Myspace page defines the individual.</p>
+                    </li>
+                    <li class="card">
+                        <img class="card-icon" src="./images/icon-time.svg" alt="icon">
+                        <h3 class="card-title">Five second tests</h3>
+                        <p class="card-descrition">Personal choices and the overall personality of the person. </p>
+                    </li>
+                </ul>
+                <div class="btn-wrapper">
+                    <button class="sign-up__btn">Sign Up Now</button>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer>
         <div class="content">
             <div class="row">
@@ -20,7 +51,7 @@
                     <img src="./images/logo.svg" alt="logo" class="logo">
                 </div>
                 <div class="col">
-                    <p class="links-title">Quick Links</p>
+                    <h4 class="links-title">Quick Links</h4>
                     <ul class="footer-links col">
                         <li><a href="">About Us</a></li>
                         <li><a href="">Blog</a></li>
@@ -29,7 +60,7 @@
                     </ul>
                 </div>
                 <div class="col">
-                    <p class="links-title">Legal Stuff</p>
+                    <h4 class="links-title">Legal Stuff</h4>
                     <ul class="footer-links col">
                         <li><a href="">Disclamer</a></li>
                         <li><a href="">Financing</a></li>
@@ -40,8 +71,8 @@
                 <form action="submit">
                     <div class="form col">
                         <legend>
-                            <p>Knowing you're always on the best energy deal.
-                            </p>
+                            <h4>Knowing you're always on the best energy deal.
+                            </h4>
                         </legend>
                         <input type="text" placeholder="Enter your phone Number">
                         <button class="sign-up__btn">Sign Up Now</button>
