renamed png to jpg

--- a/students/dunaieva_alona/07_figma/index.html
+++ b/students/dunaieva_alona/07_figma/index.html
@@ -93,19 +93,19 @@
             <h2>Portfolio</h2>
             <div>
                 <a href="https://www.google.com.ua/?hl=ru" target="_blank">
-                    <img src="./images/woman-min.png" alt="portfolio-sale">
+                    <img src="./images/woman-min.jpg" alt="portfolio-sale">
                 </a><br>
                 <a href="#">Online fashion store - Homepage</a><br>
             </div>
             <div>
                 <a href="https://www.google.com.ua/?hl=ru" target="_blank">
-                    <img src="./images/reebok_web-min.png" alt="portfolio_reebok">
+                    <img src="./images/reebok_web-min.jpg" alt="portfolio_reebok">
                 </a><br>
                 <a href="#">Reebok Store - Concept</a><br>
             </div>
             <div>
                 <a href="https://www.google.com.ua/?hl=ru" target="_blank">
-                    <img src="./images/reebok_web-mint52.png" alt="portfolio_reebok_t52">
+                    <img src="./images/reebok_web-mint52.jpg" alt="portfolio_reebok_t52">
                 </a><br>
                 <a href="#">Braun Landing Page - Concept</a>
             </div>
