renamed png to jpg

--- a/students/dunaieva_alona/08_css/index.html
+++ b/students/dunaieva_alona/08_css/index.html
@@ -122,19 +122,19 @@
             <h2>Portfolio</h2>
             <div>
                 <a href="https://www.google.com.ua/?hl=ru" target="_blank">
-                    <img src="./images/woman-min.png" alt="portfolio-sale" width="936px" height="510px">
+                    <img src="./images/woman-min.jpg" alt="portfolio-sale" width="936px" height="510px">
                 </a><br>
                 <a href="#" style="text-decoration-line: underline;">Online fashion store - Homepage</a><br>
             </div>
             <div>
                 <a href="https://www.google.com.ua/?hl=ru" target="_blank">
-                    <img src="./images/reebok_web-min.png" alt="portfolio_reebok" width="936px" height="510px">
+                    <img src="./images/reebok_web-min.jpg" alt="portfolio_reebok" width="936px" height="510px">
                 </a><br>
                 <a href="#" style="text-decoration-line: underline;">Reebok Store - Concept</a><br>
             </div>
             <div>
                 <a href="https://www.google.com.ua/?hl=ru" target="_blank">
-                    <img src="./images/reebok_web-mint52.png" alt="portfolio_reebok_t52" width="936px" height="510px">
+                    <img src="./images/reebok_web-mint52.jpg" alt="portfolio_reebok_t52" width="936px" height="510px">
                 </a><br>
                 <a href="#" style="text-decoration-line: underline;">Braun Landing Page - Concept</a>
             </div>
