--- a/students/hridina_anastasiia/12_css_position/index.html
+++ b/students/hridina_anastasiia/12_css_position/index.html
@@ -14,91 +14,135 @@
 </head>
 
 <body>
-    <header class="header">
-        <div class="eng">
-            <p>ENG</p>
-        </div>
-        <div class="documentation">
-            <p>DOCUMENTATION / WHO'S USING</p>
-        </div>
-        <div class="logo">
-            <img src="./images/company-logo-black.svg" alt="Logo">
+    <header>
+        <div class="container">
+            <div class="header">
+                <div class="eng">
+                    <p>ENG</p>
+                </div>
+                <div class="documentation">
+                    <p>DOCUMENTATION / WHO'S USING</p>
+                </div>
+                <div class="logo">
+                    <img src="./images/company-logo-black.svg" alt="Logo">
+                </div>
+            </div>
         </div>
     </header>
     <main>
-        <div class="sidenav">
-            <nav class="nav">
-                <ul class="nav__list">
-                    <li class="nav__link"><a href="#">INTRODUCTION</a></li>
-                    <li class="nav__link"><a href="#">CORE COMPONENTS</a></li>
-                    <li class="nav__link"><a href="#">REACT FUNDAMENTALS</a></li>
-                    <li class="nav__link"><a href="#">HANDLING TEXT INPUT</a></li>
-                </ul>
-            </nav>
-        </div>
-        <div class="introduction">
-            <h3>INTRODUCTION<span>Chapter 1</span></h3>
-            <p>Welcome to the very start of your React Native journey! If you're looking for environment setup
-                instructions, they've
-                moved to their own section. Continue reading for an introduction to the documentation, Native
-                Components, React, and
-                more!</p>
-        </div>
-        <div class="components">
-            <h3>CORE COMPONENTS<span>Chapter 2</span></h3>
-            <p>React Native is an open source framework for building Android and iOS applications using React and the
-                app platform’s
-                native capabiles. With React Native, you use JavaScript to access your platform’s APIs as well as to
-                describe the
-                appearance and behavior of your UI using React components: bundles of reusable, nestable code. You can
-                learn more about
-                React in the next section. But first, let’s cover how components work in React Native.</p>
-        </div>
-        <div class="react">
-            <h3>REACT FUNDAMENTALS<span>Chapter 3</span>
-            </h3>
-            <p>React Native runs on React, a popular open source library for building user interfaces with JavaScript.
-                To make the most
-                of React Native, it helps to understand React itself. This section can get you started or can serve as a
-                refresher
-                course.
-            </p>
-            <p>We’re going to cover the core concepts behind React.</p>
-            <p><b>+ components.</b> The rest of this introduction to React uses cats in its examples:
-                friendly, approachable
-                creatures that
-                need names and a cafe to work in.
-            </p>
-            <p><b>+ JSX.</b> React and React Native use JSX, a syntax that lets you write elements inside JavaScript
-                like so: <br>
-                <span><Text>Hello, I am your cat!</Text></span>.
-            </p>
-            <p>The React docs have a comprehensive guide to JSX you can refer to learn even more. Because JSX is
-                JavaScript, you can
-                use variables inside it. Here you are declaring a name for the cat, name, and embedding it with curly
-                braces inside
-                <Text>
-            </p>
-            <p><b>+ props.</b> Props is short for “properties”.
-            </p>
-            <p><b>+ state.</b> While you can think of props as arguments you use to configure how components render,
-                state is like a component’s personal data storage. State is useful for handling data that changes over
-                time or
-                that comes from user interaction. State gives your components memory!
-            </p>
-        </div>
-        <div class="text__input">
-            <h3>HANDLING TEXT INPUT<span>Chapter 4</span></h3>
-            <p>TextInput is a Core Component that allows the user to enter text. It has an onChangeText prop that takes
-                a function to
-                be called every time the text changed, and an onSubmitEditing prop that takes a function to be called
-                when the text is
-                submitted.</p>
-            <p>For example, let's say that as the user types, you're translating their words into a different language.
-                In this new
-                language, every single word is written the same way: 🍕. So the sentence "Hello there Bob" would be
-                translated as "🍕
-                🍕".</p>
+        <div class="wrapper">
+            <div class="sidenav">
+                <nav class="nav">
+                    <ul class="nav__list">
+                        <li class="nav__link"><a href="#">INTRODUCTION</a></li>
+                        <li class="nav__link"><a href="#">CORE COMPONENTS</a></li>
+                        <li class="nav__link"><a href="#">REACT FUNDAMENTALS</a></li>
+                        <li class="nav__link"><a href="#">HANDLING TEXT INPUT</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="main">
+                <div class="introduction">
+                    <h3>INTRODUCTION<sup>Chapter 1</sup></h3>
+                    <p>Welcome to the very start of your React Native journey! If you're looking for environment
+                        setup
+                        instructions, they've
+                        moved to <u>their own section.</u> Continue reading for an introduction to the documentation,
+                        Native
+                        Components, React, and
+                        more!</p>
+                </div>
+                <div class="components">
+                    <h3>CORE COMPONENTS<sup>Chapter 2</sup></h3>
+                    <p>React Native is an open source framework for building Android and iOS applications using
+                        React
+                        and
+                        the
+                        app platform’s
+                        native capabiles. With React Native, you use JavaScript to access your platform’s APIs as
+                        well
+                        as to
+                        describe the
+                        appearance and behavior of your UI using React components:<i>bundles of reusable, nestable
+                            code.</i>
+                        You
+                        can
+                        learn more about
+                        React in the next section. But first, let’s cover how components work in React Native.</p>
+                </div>
+                <div class="react">
+                    <h3>REACT FUNDAMENTALS<sup>Chapter 3</sup>
+                    </h3>
+                    <p>React Native runs on <u>React</u>, a popular open source library for building user interfaces
+                        with
+                        JavaScript.
+                        To make the most
+                        of React Native, it helps to understand React itself. This section can get you started or
+                        can
+                        serve
+                        as a
+                        refresher
+                        course.
+                    </p>
+                    <p>We’re going to cover the core concepts behind React.</p>
+                    <p><b>+ components.</b> The rest of this introduction to React uses cats in its examples:
+                        friendly, approachable
+                        creatures that
+                        need names and a cafe to work in.
+                    </p>
+                    <p><b>+ JSX.</b> React and React Native use JSX, a syntax that lets you write elements inside
+                        JavaScript
+                        like so: <br>
+                        <mark>
+                            < Text>Hello, I am your cat!.
+                                < />
+                        </mark>
+                    </p>
+                    <p>The React docs have<u>a comprehensive guide to JSX</u> you can refer to learn even more. Because
+                        JSX is
+                        JavaScript, you can
+                        use variables inside it. Here you are declaring a <mark>name</mark> for the cat, name, and
+                        embedding it
+                        with
+                        curly
+                        braces inside <br><mark>
+                            < Text>
+                        </mark>
+                    </p>
+                    <p><b>+ props.</b> Props is short for “properties”.
+                    </p>
+                    <p><b>+ state.</b> While you can think of props as arguments you use to configure how components
+                        render,
+                        state is like a component’s personal data storage. State is useful for handling data that
+                        changes
+                        over
+                        time or
+                        that comes from user interaction. State gives your components memory!
+                    </p>
+                </div>
+                <div class="text__input">
+                    <h3>HANDLING TEXT INPUT<sup>Chapter 4</sup></h3>
+                    <p>TextInput is a Core Component that allows the user to enter text. It has an <i>onChangeText</i>
+                        prop
+                        that
+                        takes
+                        a function to
+                        be called every time the text changed, and an onSubmitEditing prop that takes a function to
+                        be
+                        called
+                        when the text is
+                        submitted.</p>
+                    <p>For example, let's say that as the user types, you're translating their words into a
+                        different
+                        language.
+                        In this new
+                        language, every single word is written the same way: 🍕. So the sentence "Hello there Bob"
+                        would
+                        be
+                        translated as "🍕
+                        🍕".</p>
+                </div>
+            </div>
         </div>
     </main>
 </body>
