--- a/students/hridina_anastasiia/09_selectors/index.html
+++ b/students/hridina_anastasiia/09_selectors/index.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Denis Novik</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <style>
         body {
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            font-family: Montserrat;
             font-size: 18px;
             line-height: normal;
             letter-spacing: .5px;
@@ -22,7 +25,7 @@
         <nav class="nav">
             <ul class="menu">
                 <li class="menu__item">
-                    <a href="index.html#" class="menu__link">Home</a>
+                    <a href="#" class="menu__link">Home</a>
                 </li>
                 <li class="menu__item">
                     <a href="#aboutme" class="menu__link">About me</a>
