--- a/students/linov_mykhailo/11_flexbox/index.html
+++ b/students/linov_mykhailo/11_flexbox/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <header>
-        <div class="container">
+        <div class="container header">
             <div class="logo">
                 <div class="logo__image">
                     <img src="images/jpg/Logo.jpg" alt="Productly">
@@ -37,11 +37,93 @@
     </header>
 
     <main>
-
+        <section>
+            <div class="container hero">
+                <div class="hero-text">
+                    <h1>The Design Thinking superpowers</h1>
+                    <p>Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to
+                        imagine
+                        your next user experience.</p>
+                    <button type="button" class="signup get-started">Get started</button>
+                </div>
+                <div class="hero-image">
+                    <img src="images/jpg/image.jpg" alt="three happy people on a floor">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container superpowers">
+                <div class="main-idea">
+                    <h2>We design tools to unveil your superpowers</h2>
+                </div>
+                <ul class="options">
+                    <li class="options__col">
+                        <img src="images/svg/pointer.svg" alt="pointer">
+                        <h3>First click tests</h3>
+                        <p>While most people enjoy casino gambling,</p>
+                    </li>
+                    <li class="options__col">
+                        <img src="images/svg/snake.svg" alt="surveys">
+                        <h3>Design surveys</h3>
+                        <p>Sports betting, lottery and bingo playing for the fun</p>
+                    </li>
+                    <li class="options__col">
+                        <img src="images/svg/heart.svg" alt="preference">
+                        <h3>Preference tests</h3>
+                        <p>The Myspace page defines the individual.</p>
+                    </li>
+                    <li class="options__col">
+                        <img src="images/svg/clock.svg" alt="tests">
+                        <h3>Five second tests</h3>
+                        <p>Personal choices and the overall personality of the person.</p>
+                    </li>
+                </ul>
+                <div class="main-idea__button">
+                    <button type="button" class="signup get-started">Sign up Now</button>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
-        <div class="container"></div>
+        <div class="container footer">
+            <div class="logo">
+                <div class="logo__image">
+                    <img src="images/jpg/Logo.jpg" alt="Productly">
+                </div>
+            </div>
+            <div class="footer__col">
+                <div>
+                    <h4>Quick Links</h4>
+                </div>
+                <ul class="col__list">
+                    <li class="col__links">About Us</li>
+                    <li class="col__links">Blog</li>
+                    <li class="col__links">Contact</li>
+                    <li class="col__links">FAQ</li>
+                </ul>
+            </div>
+            <div class="footer__col">
+                <div>
+                    <h4>Legal Stuff</h4>
+                </div>
+                <ul class="col__list">
+                    <li class="col__links">Disclaimer</li>
+                    <li class="col__links">Financing</li>
+                    <li class="col__links">Privacy Policy</li>
+                    <li class="col__links">Terms of Service</li>
+                </ul>
+            </div>
+            <div class="footer__signup">
+                <div>
+                    <h4>Knowing you're always on the best energy deal.</h4>
+                </div>
+                <input type="phone" name="phone" id="phone" placeholder="Enter your phone Number">
+                <div class="footer__button">
+                    <button type="button" class="signup get-started">Sign up Now</button>
+                </div>
+            </div>
+        </div>
     </footer>
 
 </body>
