--- a/students/savchak_marharyta/07_figma/index.html
+++ b/students/savchak_marharyta/07_figma/index.html
@@ -8,6 +8,18 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>About me</li>
+                <li>Skills</li>
+                <li>Portfolio</li>
+                <li>Contacts</li>
+            </ul>
+        </nav>
+        <img src="images/Vector.svg" alt="">
+    </header>
 
 </body>
 
