1st_2nd_sections

--- a/students/savchak_marharyta/07_figma/index.html
+++ b/students/savchak_marharyta/07_figma/index.html
@@ -20,7 +20,38 @@
         </nav>
         <img src="images/Vector.svg" alt="">
     </header>
-
+    <main>
+        <section>
+            <h1>Denis Novik</h1>
+            <img src="images/jpeg-optimizer_BSPP2266.jpg" alt="Denis Novik">
+        </section>
+        <section>
+            <h2>About me</h2>
+            <div>
+                <p>
+                    Hi, I'm Denis – UX/UI designer from Minsk.<br>
+                    I'm interested in design and everything connected with it.
+                </p>
+                <p>
+                    I'm studying at courses "Web and mobile design<br>
+                    interfaces" in IT-Academy.
+                </p>
+                <p>
+                    Ready to implement excellent projects<br>
+                    with wonderful people.
+                </p>
+            </div>
+        </section>
+        <section>
+            <h2>Skills</h2>
+        </section>
+        <section>
+            <h2>Portfolio</h2>
+        </section>
+        <section></section>
+        <section></section>
+    </main>
+    <footer></footer>
 </body>
 
 </html>
