--- a/students/savchak_marharyta/07_figma/index.html
+++ b/students/savchak_marharyta/07_figma/index.html
@@ -44,6 +44,62 @@
         </section>
         <section>
             <h2>Skills</h2>
+            <p>I work in such programs as</p>
+            <ul>
+                <li>
+                    <figure>
+                        <img src="images/PS_icon.svg" alt="">
+                        <figcaption>Adobe Photoshop</figcaption>
+                    </figure>
+                    <div>
+                        <img src="images/black_star.svg" alt="">
+                        <img src="images/black_star.svg" alt="">
+                        <img src="images/black_star.svg" alt="">
+                        <img src="images/black_star.svg" alt="">
+                        <img src="images/gray_star.svg" alt="">
+                    </div>
+
+                </li>
+                <li>
+                    <figure>
+                        <img src="images/AI_icon.svg" alt="">
+                        <figcaption>Adobe Illustrator</figcaption>
+                    </figure>
+                    <div>
+                        <img src="images/black_star.svg" alt="">
+                        <img src="images/black_star.svg" alt="">
+                        <img src="images/black_star.svg" alt="">
+                        <img src="images/gray_star.svg" alt="">
+                        <img src="images/gray_star.svg" alt="">
+                    </div>
+                </li>
+                <li>
+                    <figure>
+                        <img src="images/AE_icon.svg" alt="">
+                        <figcaption>Adobe After Effects</figcaption>
+                    </figure>
+                    <div>
+                        <img src="images/black_star.svg" alt="">
+                        <img src="images/black_star.svg" alt="">
+                        <img src="images/black_star.svg" alt="">
+                        <img src="images/black_star.svg" alt="">
+                        <img src="images/gray_star.svg" alt="">
+                    </div>
+                </li>
+                <li>
+                    <figure>
+                        <img src="images/Figma_icon.svg" alt="">
+                        <figcaption>Figma</figcaption>
+                    </figure>
+                    <div>
+                        <img src="images/black_star.svg" alt="">
+                        <img src="images/black_star.svg" alt="">
+                        <img src="images/black_star.svg" alt="">
+                        <img src="images/black_star.svg" alt="">
+                        <img src="images/gray_star.svg" alt="">
+                    </div>
+                </li>
+            </ul>
         </section>
         <section>
             <h2>Portfolio</h2>
