--- a/students/savchak_marharyta/07_figma/index.html
+++ b/students/savchak_marharyta/07_figma/index.html
@@ -103,9 +103,25 @@
         </section>
         <section>
             <h2>Portfolio</h2>
+            <div>
+                <img src="images/jpeg-optimizer_Слой 8.png" alt="">
+                <p>
+                    <a href="#">Online fashion store - Homepage</a>
+                </p>
+            </div>
+            <div>
+                <img src="images/jpeg-optimizer_reebok_web.png" alt="">
+                <p>
+                    <a href="#">Reebok Store - Concept</a>
+                </p>
+            </div>
+            <div>
+                <img src="images/jpeg-optimizer_reebok_web (1).png" alt="">
+                <p>
+                    <a href="#">Braun Landing Page - Concept</a>
+                </p>
+            </div>
         </section>
-        <section></section>
-        <section></section>
     </main>
     <footer></footer>
 </body>
