--- a/students/savchak_marharyta/07_figma/index.html
+++ b/students/savchak_marharyta/07_figma/index.html
@@ -123,7 +123,28 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <h2>Contacts</h2>
+        <p>Want to know more or just chat? You are welcome!</p>
+        <button type="button">Send message</button>
+        <ul>
+            <li>
+                <img src="images/1st_footer_icon.svg" alt="">
+            </li>
+            <li>
+                <img src="images/2ndfooter_icon.svg" alt="">
+            </li>
+            <li>
+                <img src="images/3rd_footer_icon.svg" alt="">
+            </li>
+            <li>
+                <img src="images/4th_footer_icon.svg" alt="">
+            </li>
+        </ul>
+        <p>Like me on <br>
+            LinkedIn, Instagram, Behance,<br>
+            Dribble</p>
+    </footer>
 </body>
 
 </html>
