--- a/students/motkaliuk_andrii/11_flexbox_bootstrap/index.html
+++ b/students/motkaliuk_andrii/11_flexbox_bootstrap/index.html
@@ -15,72 +15,78 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
-<body class="container">
-    <header class="header_container">
-        <div class="emblem">
-            <img src="./images/logo.svg" alt="logo">
-        </div>
-        <nav class="navigation_list">
-            <ul>
-                <li class="navigation_item"><a href="#">Product</a></li>
-                <li class="navigation_item"><a href="#">Customers</a></li>
-                <li class="navigation_item"><a href="#">Pricing</a></li>
-                <li class="navigation_item"><a href="#">Resources</a></li>
-            </ul>
-        </nav>
-        <div class="sign_in_up">
-            <div class="sign_in">
-                <button class="sign_in_button">Sign In</button>
+<body>
+    <header class="header">
+        <div class="container">
+            <div class="logo">
+                <img src="./images/logo.svg" alt="logo">
             </div>
-            <div class="sign_up">
-                <button class="sign_up_button">Sign Up</button>
+            <nav class="menu">
+                <ul>
+                    <li class="menu_item"><a href="#">Product</a></li>
+                    <li class="menu_item"><a href="#">Customers</a></li>
+                    <li class="menu_item"><a href="#">Pricing</a></li>
+                    <li class="menu_item"><a href="#">Resources</a></li>
+                </ul>
+            </nav>
+            <div class="sign_in_up">
+                <div class="sign_in">
+                    <!-- tag a -->
+                    <button class="sign_in_button">Sign In</button>
+                </div>
+                <div class="sign_up">
+                    <button class="sign_up_button">Sign Up</button>
+                </div>
             </div>
-
         </div>
     </header>
 
     <main>
-        <section class="design_container">
-            <div class="design_item1">
-                <h1 class="design_header">The Design Thinking superpowers</h1>
-                <p class="design_item_content">Tools, tutorials, design and innovation experts, all in one place!
-                    The most intuitive way to imagine your next user
-                    experience.</p>
+        <div class="container">
+            <section class="design">
+                <div class="design_item1">
+                    <h1 class="design_header">The Design Thinking superpowers</h1>
+                    <p class="design_item_content">Tools, tutorials, design and innovation experts, all in one place!
+                        The most intuitive way to imagine your next user
+                        experience.</p>
 
-                <div class="button_container">
-                    <button class="get_started_button">Get started</button>
+                    <div class="button_container">
+                        <button class="get_started_button">Get started</button>
+                    </div>
                 </div>
-            </div>
-            <div class="design_item2">
-                <img src="./images/des_thinking.svg" alt="logo">
-            </div>
-        </section>
+                <div class="design_item2">
+                    <img src="./images/des_thinking.svg" alt="logo">
+                </div>
+            </section>
+        </div>
 
-        <section>
-            <h2 class="we_design_header">We design tools to unveil<br> your superpowers</h2>
-            <div class="we_design_container">
-                <div class="we_disign_item">
-                    <img src="images/cursor.svg" alt="click picture">
-                    <h3 class="we_design_item_header">First click tests</h3>
-                    <p class="we_design_content">While most people enjoy casino gambling.</p>
-                </div>
-                <div class="we_disign_item">
-                    <img src="images/path.svg" alt="click picture">
-                    <h3 class="we_design_item_header">Design surveys</h3>
-                    <p class="we_design_content">Sports betting, lottery and bingo<br> playing for the fun.</p>
-                </div>
-                <div class="we_disign_item">
-                    <img src="images/like.svg" alt="click picture">
-                    <h3 class="we_design_item_header">Preference tests</h3>
-                    <p class="we_design_content">The Myspace page defines the<br> individual.</p>
-                </div>
-                <div class="we_disign_item">
-                    <img src="images/time.svg" alt="click picture">
-                    <h3 class="we_design_item_header">Five second tests</h3>
-                    <p class="we_design_content">Personal choices and the overall<br> personality of the person.</p>
-                </div>
-                <div class="we_disign_button_container">
-                    <button class="get_started_button">Sign up Now</button>
+        <section class="we-design">
+            <div class="container">
+                <h2 class="we_design_header">We design tools to unveil<br> your superpowers</h2>
+                <div class="we_design_container">
+                    <div class="we_disign_item">
+                        <img src="images/cursor.svg" alt="click picture">
+                        <h3 class="we_design_item_header">First click tests</h3>
+                        <p class="we_design_content">While most people enjoy casino gambling.</p>
+                    </div>
+                    <div class="we_disign_item">
+                        <img src="images/path.svg" alt="click picture">
+                        <h3 class="we_design_item_header">Design surveys</h3>
+                        <p class="we_design_content">Sports betting, lottery and bingo<br> playing for the fun.</p>
+                    </div>
+                    <div class="we_disign_item">
+                        <img src="images/like.svg" alt="click picture">
+                        <h3 class="we_design_item_header">Preference tests</h3>
+                        <p class="we_design_content">The Myspace page defines the<br> individual.</p>
+                    </div>
+                    <div class="we_disign_item">
+                        <img src="images/time.svg" alt="click picture">
+                        <h3 class="we_design_item_header">Five second tests</h3>
+                        <p class="we_design_content">Personal choices and the overall<br> personality of the person.</p>
+                    </div>
+                    <div class="we_disign_button_container">
+                        <button class="get_started_button">Sign up Now</button>
+                    </div>
                 </div>
             </div>
         </section>
@@ -88,39 +94,41 @@
 
 
     <footer>
-        <div class="footer_container">
-            <div class="footer_icon">
-                <img src="./images/logo.svg" alt="logo">
-            </div>
-            <div class="quick_links_block">
-                <h3 class="footer_headers">Quick Links</h3>
-                <div class="quick_links">
-                    <ul>
-                        <li><a class="quick_links_item" href="#">About Us</a></li>
-                        <li><a class="quick_links_item" href="#">Blog</a></li>
-                        <li><a class="quick_links_item" href="#">Contacts</a></li>
-                        <li><a class="quick_links_item" href="#">FAQ</a></li>
-                    </ul>
+        <div class="container">
+            <div class="footer">
+                <div class="footer_icon">
+                    <img src="./images/logo.svg" alt="logo">
                 </div>
-            </div>
-            <div class="legal_stuff_block">
-                <h3 class="footer_headers">Legal Stuff</h3>
-                <div class="legal_stuff">
-                    <ul>
-                        <li><a class="legal_stuff_item" href="#">Disclaimer</a></li>
-                        <li><a class="legal_stuff_item" href="#">Financing</a></li>
-                        <li><a class="legal_stuff_item" href="#">Privacy Policy</a></li>
-                        <li><a class="legal_stuff_item" href="#">Terms of Service</a></li>
-                    </ul>
+                <div class="quick_links_block">
+                    <h3 class="footer_headers">Quick Links</h3>
+                    <div class="quick_links">
+                        <ul>
+                            <li><a class="quick_links_item" href="#">About Us</a></li>
+                            <li><a class="quick_links_item" href="#">Blog</a></li>
+                            <li><a class="quick_links_item" href="#">Contacts</a></li>
+                            <li><a class="quick_links_item" href="#">FAQ</a></li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-            <div class="input_place">
-                <h3 class="footer_headers">Knowing you're always on <br>the best energy deal.</h3>
-                <div class="input_space_box">
-                    <input class="input_space" type="text" name="text_place" placeholder="Enter your phone Number">
+                <div class="legal_stuff_block">
+                    <h3 class="footer_headers">Legal Stuff</h3>
+                    <div class="legal_stuff">
+                        <ul>
+                            <li><a class="legal_stuff_item" href="#">Disclaimer</a></li>
+                            <li><a class="legal_stuff_item" href="#">Financing</a></li>
+                            <li><a class="legal_stuff_item" href="#">Privacy Policy</a></li>
+                            <li><a class="legal_stuff_item" href="#">Terms of Service</a></li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="footer_button_box">
-                    <button class="footer_button">Sign up Now</button>
+                <div class="input_place">
+                    <h3 class="footer_headers">Knowing you're always on <br>the best energy deal.</h3>
+                    <div class="input_space_box">
+                        <input class="input_space" type="text" name="text_place" placeholder="Enter your phone Number">
+                    </div>
+                    <div class="footer_button_box">
+                        <button class="footer_button">Sign up Now</button>
+                    </div>
                 </div>
             </div>
         </div>
